# openenv-customer-ops

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  server.py
OpenEnv-TaskSuite/: Dockerfile  README.md  env.py  inference.py  openenv.yaml  openenv_models.py
OpenEnv-TaskSuite/tasks/: data_cleaning.py  email_triage.py  meeting_scheduling.py
env/: environment.py  grader.py  models.py  reward.py  tasks.py
server/: app.py
