[project]
name = "openenv-customer-ops"
version = "0.1.0"
description = "Customer Operations OpenEnv Environment"
authors = [{name = "Hemashree"}]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entry_point = "inference.py"